[package]
name = "assembly"
version = "0.1.1"
authors = ["Xiphoseer"]
edition = "2018"
description = "Library for files/resources for LU related software"
license = "MIT"

[dependencies]
encoding = "^0.2"
num-traits = "0.2"
num-derive = "0.2"

[dependencies.nom]
version = "^4.2"
features = []

[[bin]]
name="assembly-engineer"
path="src/bin/engineer/main.rs"

[[bin]]
name="assembly-inventor"
path="src/bin/inventor/main.rs"

[[bin]]
name="assembly-summoner"
path="src/bin/summoner/main.rs"
