[package]
name = "assembly"
version = "0.4.1"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Library for files/resources for LU related software"
license = "MIT"

[dependencies]
encoding = "0.2"
num-traits = "0.2"
num-derive = "0.2"
getopts = "0.2"
base64 = "0.10"
cfb = "0.3.1"
flate2 = "0.2"

[dependencies.nom]
version = "^4.2"
features = []

[[bin]]
name="assembly-engineer"
path="src/bin/engineer/main.rs"

[[bin]]
name="assembly-inventor"
path="src/bin/inventor/main.rs"

[[bin]]
name="assembly-summoner"
path="src/bin/summoner/main.rs"
