[package]
name = "assembly-core"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Core functionality of the assembly crate"
license = "MIT"
readme = "README.md"

[dependencies]
nom = "6.0"
num-traits = "0.2"
num-derive = "0.2"
byteorder = "1"
displaydoc = "0.1.5"
anyhow = "1.0"
thiserror = "1.0"
derive-new = "0.5"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[features]
serde-derives = ["serde"]