[package]
name = "assembly-core"
version = "0.3.0"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://assembly.lu-dev.net/"
repository = "https://github.com/LUDevNet/Assembly/tree/main/modules/core"
description = "Core functionality of the assembly crate"
license = "MIT"
readme = "README.md"

[dependencies]
nom = "7"
displaydoc = "0.1.5"
thiserror = "1.0"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[features]
serde-derives = ["serde"]
