[package]
name = "assembly-data"
version = "0.2.2-beta.2"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Database module for the assembly crate"
license = "MIT"
readme = "README.md"

[features]
default = ["sqlite", "serde-derives"]
sqlite = ["rusqlite"]
serde-derives = ["serde", "quick-xml/serialize"]

[dependencies]
hsieh-hash = "0.1"
thiserror = "1.0"
memchr = "2.3"
encoding_rs = "0.8"
derive-new = "0.5"
bytemuck = "1.4"
bytemuck_derive = "1"

[dependencies.assembly-core]
version = "0.2.0"
path = "../core"

[dependencies.quick-xml]
version = "0.20"
features = ["encoding"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
prettytable-rs = "0.8"
mapr = "0.8"
structopt = "0.3"
color-eyre = "0.5"