[package]
name = "assembly-data"
version = "0.4.0"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.de"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Database module for the assembly crate"
license = "MIT"
readme = "README.md"

[features]
default = ["sqlite", "serde-derives"]
sqlite = ["assembly-fdb/sqlite"]
serde-derives = ["assembly-fdb/serde-derives", "assembly-xml/serialize"]

[dependencies.assembly-fdb]
version = "0.2.0"
path = "../fdb"

[dependencies.assembly-xml]
version = "0.3.0"
path = "../xml"

[dev-dependencies]
structopt = "0.3"
color-eyre = "0.5"
