[package]
name = "assembly-data"
version = "0.4.0"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.de"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Database module for the assembly crate"
license = "MIT"
readme = "README.md"

[[example]]
name = "xmldb-to-fdb"
required-features = ["fdb-store"]

[features]
fdb-store = ["assembly-fdb/store"]
default = ["sqlite", "serde-derives"]
sqlite = ["assembly-fdb/sqlite"]
serde-derives = ["assembly-fdb/serde-derives", "assembly-xml/serialize"]

[dependencies.assembly-fdb]
version = "0.1.0"
path = "../fdb"

[dependencies.assembly-xml]
version = "0.4.0"
path = "../xml"

[dev-dependencies]
structopt = "0.3"
color-eyre = "0.5"
latin1str = "0.1.1"
