[package]
name = "assembly-fdb"
version = "0.1.0"
edition = "2018"
license = "MIT or Apache-2.0"

[features]
default = ["sqlite", "serde-derives"]
sqlite = ["rusqlite", "assembly-fdb-core/sqlite"]
serde-derives = ["serde", "latin1str/serde", "assembly-fdb-core/serde"]

[dependencies]
bytemuck = "1.4"
bytemuck_derive = "1"
derive-new = "0.5"
displaydoc = "0.2"
nom = "7"
sfhash = "0.1"
thiserror = "1.0"
latin1str = "0.1.1"

[dependencies.assembly-fdb-core]
version = "0.1.0"
path = "../fdb-core"
features = ["bytemuck"] # needed for `ro`

[dependencies.assembly-core]
version = "0.3.0"
path = "../core"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled", "column_decltype"]
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
prettytable-rs = "0.8"
mapr = "0.8"
structopt = "0.3"
color-eyre = "0.5"
serde_json = "1.0.61"
