[package]
name = "assembly-fdb"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/LUDevNet/Assembly/tree/main/modules/fdb"
description = "Tools to use an create FDB files"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
ro = []
io = []
io-read = ["assembly-core/nom", "dep:nom"]
io-write = []
store = ["io-write"]
core = []
core-loader = ["io-read", "core"]
default = ["serde-derives"]
sqlite = ["rusqlite", "assembly-fdb-core/sqlite"]
serde-derives = ["serde", "latin1str/serde", "assembly-fdb-core/serde"]
bytemuck = ["assembly-fdb-core/bytemuck"]

[[example]]
name = "sqlite-to-fdb"
required-features = ["store", "sqlite"]

[[example]]
name = "fdb-to-sqlite"
required-features = ["sqlite"]

[[example]]
name = "template-fdb"
required-features = ["store"]

[[example]]
name = "fdb-copy"
required-features = ["store"]

[dependencies]
displaydoc = "0.2"
thiserror = "1.0"
latin1str = "0.1.1"

[dependencies.nom]
version = "7"
optional = true

[dependencies.assembly-fdb-core]
version = "0.1.0"
path = "../fdb-core"

[dependencies.assembly-core]
version = "0.3.0"
path = "../core"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled", "column_decltype"]
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
prettytable-rs = "0.8"
mapr = "0.8"
structopt = "0.3"
color-eyre = "0.5"
serde_json = "1.0.61"

[package.metadata.docs.rs]
all-features = true
