[package]
name = "assembly"
version = "0.8.0"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Library for files/resources for LU related software"
license = "MIT"
readme = "README.md"

[features]
default = ["core", "data", "maps", "pack"]
core = ["assembly-core"]
data = ["assembly-data"]
maps = ["assembly-maps"]
pack = ["assembly-pack"]
serde-derives = [
    "assembly-core/serde-derives",
    "assembly-maps/serde-derives"
]

[dependencies]
assembly-core = { path = "../core", version = "0.3.0", optional = true }
assembly-data = { path = "../data", version = "0.4.0", optional = true }
assembly-maps = { path = "../maps", version = "0.3.0", optional = true }
assembly-pack = { path = "../pack", version = "0.4.0", optional = true }
