[package]
name = "assembly-maps"
version = "0.3.0"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Map content module for the assembly crate"
license = "MIT"
readme = "README.md"

[dependencies]
assembly-core = { path = "../core", version = "0.2.1" }
num-traits = "0.2"
thiserror = "1"
byteorder = "1"
displaydoc = "0.1"

[dev-dependencies]
structopt = "0.2"
anyhow = "1"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[features]
serde-derives = ["serde", "assembly-core/serde-derives"]