[package]
name = "assembly-pack"
version = "0.3.0"
edition = "2018"
homepage = "https://xiphoseer.de"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Packages module for the assembly crate"
license = "MIT"
readme = "README.md"

[dependencies]
assembly-core = { path = "../core", version = "0.2.1" }
bincode = "1.3"
crc = "2.0"
flate2 = "1.0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
argh = "0.1.4"
color-eyre = "0.5"
serde_json = "1"
