[package]
name = "assembly-pack"
version = "0.3.3"
edition = "2018"
homepage = "https://xiphoseer.de"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Packages module for the assembly crate"
license = "MIT"
readme = "README.md"

[dependencies]
bincode = "1.3"
crc = "2.0"
flate2 = "1.0"
futures-util = "0.3"
md5 = "0.7"
nom = "7.0"
nom-supreme = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
argh = "0.1.4"
color-eyre = "0.5"
serde_json = "1"
lipsum = "0.8"