[package]
name = "assembly-sysdiagram"
version = "0.1.1"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Library for files/resources for LU related software"
license = "MIT"
readme = "README.md"

[dependencies]
assembly-core = { path = "../core", version = "0.3.0" }
ms-oforms = { version = "0.3.0-alpha1" }
nom = "5.0"
base64 = "0.10"
cfb = "0.3.1"
encoding = "0.2"
displaydoc = "0.1"
thiserror = "1.0"

[dev-dependencies]
assembly-data = { path = "../data", version = "0.3.0-beta.0" }
anyhow = "1.0"
getopts = "0.2"
