[package]
name = "assembly-sysdiagram"
version = "0.1.1"
authors = ["Xiphoseer"]
edition = "2018"
homepage = "https://xiphoseer.github.io"
repository = "https://github.com/xiphoseer/assembly_rs"
description = "Library for files/resources for LU related software"
license = "MIT"
readme = "README.md"

[features]
cli = ["dep:assembly-fdb", "dep:anyhow", "dep:mapr", "dep:argh"]

[dependencies]
assembly-core = { path = "../core", version = "0.3.0" }
ms-oforms = { git = "https://github.com/Xiphoseer/rust-ms-oforms.git", rev = "9937cd5"}
base64 = "0.10"
cfb = "0.3.1"
encoding = "0.2"
displaydoc = "0.1"
thiserror = "1.0"
anyhow = { version = "1.0", optional = true }
mapr = { version = "0.8", optional = true }
argh = { version = "0.1.9", optional = true }

[dependencies.nom]
version = "7"

[dependencies.assembly-fdb]
path = "../fdb"
optional = true
version = "0.1.0"
features = ["core-loader"]

[[bin]]
name = "fdb-sysdiagram"
required-features = ["cli"]