[package]
name = "assembly-xml"
version = "0.4.0"
edition = "2018"
license = "MPL-2.0"
description = "XML formats used in the game LEGO® Universe"
repository = "https://github.com/xiphoseer/assembly_rs/tree/main/modules/xml"
readme = "README.md"

[features]
default = ["serialize"]
serialize = ["serde", "quick-xml/serialize"]

[dependencies]
thiserror = "1.0"
displaydoc = "0.1.5"
log = "0.4"

[dependencies.quick-xml]
version = "0.23"
features = ["encoding"]

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dev-dependencies]
argh = "0.1.4"
structopt = "0.3"
color-eyre = "0.5"
serde_json = "1.0.61"
serde_path_to_error = "0.1"

[dev-dependencies.rusqlite]
version = "0.26.3"
features = ["bundled", "column_decltype"]
